<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fusion.kim.medmanager.MainActivity" >

    <item android:id="@+id/action_profile"
        android:title="@string/profile"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item android:id="@+id/action_stop_alarm"
        android:title="@string/stop_alarm"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
</menu>
