<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="10dp"
    tools:context=".AddMedsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_med_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_med_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textCapSentences"
                android:hint="@string/medicine_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textCapSentences"
                android:hint="@string/description"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_intervals"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textCapSentences"
                android:hint="@string/intervals_in_hours"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start Date: "
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"/>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/start_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:forwardButtonSrc="@drawable/ic_chevron_right_black_24dp"
            app:headerColor="@color/colorPrimaryDark"
            app:headerLabelColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:previousButtonSrc="@drawable/ic_chevron_left_black_24dp"
            app:selectionColor="@color/colorAccent"
            app:todayLabelColor="#cc0000"
            app:type="one_day_picker" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="End Date: "
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"/>

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/end_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:forwardButtonSrc="@drawable/ic_chevron_right_black_24dp"
            app:headerColor="@color/colorPrimaryDark"
            app:headerLabelColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:previousButtonSrc="@drawable/ic_chevron_left_black_24dp"
            app:selectionColor="@color/colorAccent"
            app:todayLabelColor="#cc0000"
            app:type="one_day_picker" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:background="@drawable/button_shape"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>